<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_bottom"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/bookmark_bottom"
        android:icon="@drawable/bookmark"
        android:title="@string/bookmark" />
    <item
        android:id="@+id/search_bottom"
        android:icon="@drawable/search"
        android:visible="false"
        android:title="@string/search" />

    <item
        android:id="@+id/notepad_bottom"
        android:icon="@drawable/notepad"
        android:title="@string/notepadv" />

    <item
        android:id="@+id/user_bottom"
        android:icon="@drawable/user"
        android:title="@string/user" />



</menu>