<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Contactus.ContactusScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:background="@color/colorPrimary">
    <ImageButton
        android:id="@+id/back_contactus"
        android:layout_width="wrap_content"
        android:padding="@dimen/size_10"
        android:layout_margin="@dimen/size_10"
        android:src="@drawable/backbtn"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">
    </ImageButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:layout_centerInParent="true"
            android:textSize="@dimen/size_18"
            android:textColor="@color/white"/>
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/size_15"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_contact"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_contact"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_message"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/body_contact"
            android:layout_width="match_parent"
            android:minHeight="@dimen/size_150"
            android:gravity="start"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/size_25"
        android:layout_marginLeft="@dimen/size_8"
        android:layout_marginRight="@dimen/size_8"
        android:background="@drawable/createacount_bg"
        android:textColor="@color/white">
    </Button>
</LinearLayout>
</LinearLayout>