<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dictionary.DictionaryScreen">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:background="@color/colorPrimary">
        <ImageButton
            android:id="@+id/back_dictionary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10"
            android:background="@android:color/transparent"
            android:padding="@dimen/size_10"
            android:src="@drawable/backbtn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dictionary"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"/>
    </RelativeLayout>


    <EditText
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:hint="@string/enter_your_word"
        android:layout_margin="@dimen/size_15"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/searchbtn"
        android:layout_width="match_parent"
        android:text="@string/search"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size_10"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/output"
        android:textColor="@color/black"
        android:layout_margin="@dimen/size_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </ScrollView>
</LinearLayout>