<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity.HomeFragment.UserProfile_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_marginTop="@dimen/size_12"
            android:layout_marginRight="@dimen/size_5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_username"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit_text"

                    android:layout_width="match_parent"
                    android:editable="false"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userDesc_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brief_description"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/brief_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/update_email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_userProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/update_address"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/country_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5"
                android:hint="@string/update_country"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country__userProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:visibility="gone"

                android:hint="@string/update_password"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password__userProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/spinnerbg"
                android:layout_marginLeft="@dimen/size_5"
                android:layout_marginRight="@dimen/size_5"
                android:visibility="visible"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/actor_Spinner"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:spinnerMode="dropdown"
                    android:paddingLeft="@dimen/size_5"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>
            <Button
                android:id="@+id/update__userProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_50"
                android:text="@string/update"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/size_25"
                android:layout_marginLeft="@dimen/size_8"
                android:layout_marginRight="@dimen/size_8"
                android:background="@drawable/createacount_bg"
                android:textColor="@color/white">
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>