<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E4E2E2"
    tools:context=".NotepadScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingTop="@dimen/size_10"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/back_btn_notes"
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/size_5"
            android:background="@android:color/transparent"
            android:src="@drawable/backnote"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/your_notes"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"/>
        <ImageButton
            android:id="@+id/delete_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
             android:src="@drawable/deletenote"
            android:visibility="visible"
            android:layout_toLeftOf="@id/save_Post"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_20"/>
        <ImageButton
            android:id="@+id/save_Post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/checknote"
            android:visibility="visible"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_20"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/size_20"
            android:gravity="start"
            android:padding="@dimen/size_10"
            android:layout_marginLeft="@dimen/size_10"
            android:layout_marginRight="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_10"
            android:background="@color/white"
            android:hint="Note Title"
            />
        <EditText
            android:id="@+id/notes_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_below="@+id/notes_title"
            android:textSize="@dimen/size_20"
            android:gravity="start"
            android:padding="@dimen/size_10"
             android:layout_marginLeft="@dimen/size_10"
            android:layout_marginRight="@dimen/size_10"
            android:layout_marginBottom="@dimen/size_10"
            android:background="@color/white"
            android:hint="@string/write_your_notes_here"
          />
        <Button
            android:id="@+id/updateNote"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/updatebtn"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"
            android:textAllCaps="false"
            android:text="@string/update_notes"
            android:visibility="gone"
            android:textStyle="normal"
            android:layout_margin="@dimen/size_10"
            android:layout_height="@dimen/size_50"/>
    </RelativeLayout>

</LinearLayout>